--- a/source/sass/blocks/properties.scss
+++ b/source/sass/blocks/properties.scss
@@ -1,6 +1,6 @@
-.copyright {
+.properties {
   font-family: "Arial", sans-serif;
-  font-size: 16px;
+  font-size: 12px;
   line-height: 16px;
-  color: #444444;
+  color: #111111;
 }
