--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -1,3 +1,8 @@
-.catalog {
-  background-color: #ffffff;
+.social {
+
+  border-top: 1px solid #e7e7e7;
+  border-bottom: 1px solid #e7e7e7;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
