--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -9,7 +9,7 @@
 }
 
 .catalog__headline {
-  font-family: "Oswald-Regular", "Arial", sans-serif;
+  font-family: $font-head;
   font-size: 36px;
   line-height: 60px;
   color: #111111;
