--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,8 +1,44 @@
 .page-header {
   background-color: #ffffff;
-  border-bottom: 1px solid #f2f2f2;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  width: 320px;
+  margin: 0 auto;
 }
 
+@media (min-width: $tablet-width) {
+  .page-header {
+    flex-direction: row;
+    width: $tablet-width;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .page-header {
+    width: $desktop-width;
+    position: absolute;
+    background-color: transparent;
+  }
+}
+
+.page-header__logo {
+  align-self: flex-start;
+
+}
+
+@media (min-width: $tablet-width) {
+  .page-header__logo {
+    align-self: center;
+  }
+}
+
+
+
 .page-header__logo-image {
-  padding: 11px 20px 15px 20px;
+  padding: 11px 0;
+  vertical-align: center;
+
 }
