--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -2,14 +2,60 @@
   margin: 0;
   padding: 0;
   list-style: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-right: 30px;
+
+}
+
+@media (min-width: $tablet-width) {
+  .site-list {
+    flex-direction: row;
+    min-width: 400px;
+  }
 }
 
 .site-list__item {
-  font-family: "Oswald-Medium", "Arial", sans-serif;
+  font-family: $font-menu;
   font-size: 20px;
   line-height: 20px;
   text-transform: uppercase;
   padding: 24px 0;
   text-align: center;
+  min-width: 320px;
   border-top: 1px solid #f2f2f2;
 }
+
+
+
+@media (min-width: $tablet-width) {
+  .site-list__item {
+    font-family: $font-head;
+    font-size: 18px;
+    line-height: 25px;
+    min-width: 50px;
+
+    padding: 5px 0;
+    border-top: none;
+    &--active {
+      border-bottom: 2px solid $leaf;
+    }
+  }
+}
+
+  @media (min-width: $desktop-width) {
+    .site-list__item {
+      font-family: $font-head;
+      font-size: 20px;
+      line-height: 25px;
+      min-width: 200px;
+      color: $white;
+
+      padding: 5px 0;
+      border-top: none;
+      &--active {
+        border-bottom: 2px solid $white;
+      }
+    }
+  }
