--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,5 +1,6 @@
 @import "normalize";
-@import "fonts.scss";
+@import "fonts";
+@import "vars";
 @import "blocks/page-header.scss";
 @import "blocks/button.scss";
 @import "blocks/copyright.scss";
@@ -20,7 +21,8 @@
 
 body {
   font-family: "Arial", sans-serif;
-  background-color: ffffff;
+  background-color: #ffffff;
+  min-width: 320px;
 }
 
 a {
@@ -44,7 +46,6 @@ input[type="radio"].visually-hidden {
   white-space: nowrap;
 
   border: 0;
-
 
   clip-path: inset(100%);
 }
