--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -1,19 +1,45 @@
 .programs__header {
-  background-image: url("../img/index-background-mobile@1x.jpg");
-  background-repeat: no-repeat;
-  background-position: center;
-  min-height: 305px;
-  text-align: center;
-  background-color: #68b738;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 70px;
+}
+
+@media (min-width: $tablet-width) {
+  .programs__header {
+    width: 100%;
+    align-items: flex-start;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .programs__header {
+    min-height: 700px;
+    flex-direction: row;
+    align-items: center;
+  }
 }
 
 .programs__headline {
   font-family: $font-head;
-
+  width: 260px;
   font-size: 36px;
   line-height: 36px;
   color: #ffffff;
-  margin: 0;
+  margin: 0 auto;
+}
+
+@media (min-width: $tablet-width) {
+  .programs__headline {
+    color: #111111;
+    font-size: 60px;
+    line-height: 60px;
+    text-align: left;
+    min-width: 450px;
+    margin: 0;
+    margin-left: 12%;
+    margin-bottom: 30px;
+  }
 }
 
 .programs__slogan {
@@ -24,8 +50,100 @@
   color: #ffffff;
 }
 
+@media (min-width: $tablet-width) {
+  .programs__slogan {
+    color: #111111;
+    font-size: 20px;
+    line-height: 20px;
+    text-align: left;
+    margin-left: 12%;
+    margin-bottom: 45px;
+  }
+}
+
 .programs__list {
   list-style: none;
   margin: 0;
   padding: 0;
+}
+
+.programs__choose {
+  margin: 0 auto;
+  position: relative;
+  bottom: -330px;
+  width: 260px;
+}
+
+@media (min-width: $tablet-width) {
+  .programs__choose {
+    bottom: 0;
+
+    margin: 0;
+
+    z-index: 10;
+    min-width: 225px;
+    margin-left: 12%;
+  }
+}
+
+.programs__wrapper {
+  background-image: url("../img/index-background-mobile@1x.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  min-height: 305px;
+  text-align: center;
+  background-color: $leaf;
+  width: 100%;
+}
+
+@media (min-width: $tablet-width) {
+  .programs__wrapper {
+    background-image: none;
+    background-color: $white;
+    min-height: 105px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .programs__wrapper {
+    width: 50%;
+    align-self: center;
+  }
+}
+
+.programs__can {
+  margin-top: -140px;
+}
+
+@media (min-width: $tablet-width) {
+  .programs__can {
+    margin: 0;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .programs__can {
+    align-self: center;
+    margin-top: 400px;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .programs__image-container {
+    margin-top: 45px;
+    align-self: center;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .programs__image-container {
+    background-image: url("../img/index-background-desktop@1x.jpg");
+
+    background-repeat: no-repeat;
+    background-position: right;
+    background-color: $leaf;
+    align-self: stretch;
+    flex-grow: 1;
+    margin: 0;
+  }
 }
