Добавляет адаптивность блокам на главной

--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -18,10 +18,12 @@
 
 @media (min-width: $desktop-width) {
   .page-header {
-    position: absolute;
-    margin: 65px auto;
+    position: relative;
+
 
     background-color: transparent;
+    max-width: 1220px;
+    margin: 0 auto;
   }
 }
 
