--- a/source/sass/blocks/feature.scss
+++ b/source/sass/blocks/feature.scss
@@ -1,10 +1,36 @@
+.feature {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+}
+
+@media (min-width: $tablet-width) {
+  .feature {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .feature {
+    flex-wrap: nowrap;
+  }
+}
+
 .feature__item {
+  position: relative;
   font-family: "Arial", sans-serif;
   color: #444444;
   font-style: 14px;
   line-height: 18px;
-  padding: 20px 20px 20px 100px;
+  padding: 0 20px 30px 100px;
   min-height: 40px;
+  background-color: transparent;
+  z-index: 2;
 
   &::before {
     position: absolute;
@@ -15,10 +41,11 @@
     background-position: center;
     width: 60px;
     height: 60px;
-    left: 40px;
+    left: 0;
   }
 
   &--useful::before {
+    font-size: 80px;
     background-image: url("../img/advantage-leaf@1x.png");
   }
 
@@ -32,5 +59,60 @@
 
   &--fast::before {
     background-image: url("../img/advantage-clock@1x.png");
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .feature__item {
+    box-sizing: border-box;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 50%;
+    min-height: 230px;
+
+    flex-grow: 1;
+
+    padding: 0;
+    margin-bottom: 90px;
+    padding-left: 20px;
+
+    &::before {
+      position: absolute;
+      content: "";
+      background-color: #68b738;
+
+      background-repeat: no-repeat;
+      background-position: center;
+      width: 60px;
+      height: 60px;
+      left: 20px;
+      top: 0;
+    }
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .feature__desc {
+    width: 250px;
+  }
+
+  .feature__desc::after {
+    position: absolute;
+    content: "0";
+    color: #f2f2f2;
+    font-size: 281px;
+    font-family: $font-head;
+    top: 90px;
+    left: 100px;
+    width: 20px;
+    height: 20px;
+    z-index: -1;
+  }
+
+  @for $i from 1 through 4 {
+    .feature__item:nth-of-type(#{$i}) .feature__desc::after {
+      content: "#{$i}";
+    }
   }
 }
