--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -3,8 +3,26 @@
   margin: 20px;
 }
 
+@media (min-width: $tablet-width) {
+  .features {
+    margin: 0;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .features {
+    max-width: 1220px;
+    margin: 0 auto;
+  }
+}
+
 .features__headline {
   font-family: "Oswald-Regular", "Arial", sans-serif;
+  color: #111111;
   font-size: 36px;
   line-height: 60px;
+  margin: 0;
+  padding: 0;
+  padding-left: 20px;
+  padding-bottom: 35px;
 }
