--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 70px;
+  margin-bottom: 90px;
 }
 
 @media (min-width: $tablet-width) {
@@ -17,6 +17,10 @@
     min-height: 700px;
     flex-direction: row;
     align-items: center;
+
+    justify-content: center;
+    margin: 0 auto;
+    margin-top: -70px;
   }
 }
 
@@ -27,6 +31,7 @@
   line-height: 36px;
   color: #ffffff;
   margin: 0 auto;
+  margin-top: 25px;
 }
 
 @media (min-width: $tablet-width) {
@@ -37,7 +42,7 @@
     text-align: left;
     min-width: 450px;
     margin: 0;
-    margin-left: 12%;
+    margin-left: 25%;
     margin-bottom: 30px;
   }
 }
@@ -56,18 +61,13 @@
     font-size: 20px;
     line-height: 20px;
     text-align: left;
-    margin-left: 12%;
+    margin-left: 25%;
     margin-bottom: 45px;
   }
 }
 
-.programs__list {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
 .programs__choose {
+  box-sizing: border-box;
   margin: 0 auto;
   position: relative;
   bottom: -330px;
@@ -82,17 +82,18 @@
 
     z-index: 10;
     min-width: 225px;
-    margin-left: 12%;
+    margin-left: 25%;
   }
 }
 
 .programs__wrapper {
-  background-image: url("../img/index-background-mobile@1x.jpg");
+  background-image: url("/img/index-background-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-position: center;
+  background-size: 320px;
   min-height: 305px;
   text-align: center;
-  background-color: $leaf;
+  background-color: #65a93c;
   width: 100%;
 }
 
@@ -140,10 +141,24 @@
     background-image: url("../img/index-background-desktop@1x.jpg");
 
     background-repeat: no-repeat;
-    background-position: right;
-    background-color: $leaf;
+
+    background-size: cover;
+    background-color: #65a93c;
     align-self: stretch;
     flex-grow: 1;
     margin: 0;
+  }
+}
+
+.programs__list {
+  margin: 0;
+  padding: 0;
+}
+
+@media (min-width: $desktop-width) {
+  .programs__list {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
   }
 }
