--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -3,4 +3,39 @@
   font-size: 16px;
   line-height: 16px;
   color: #444444;
+  display: flex;
+  justify-content: space-between;
+  border-top: 1px solid #cdcdcd;
+  padding-top: 25px;
+  cursor: pointer;
+
+  & svg {
+    fill: #444444;
+  }
+
+  &:hover svg {
+    fill: $leaf;
+  }
+
+  &:active {
+    color: rgba(68, 68, 68, 0.3);
+  }
+
+  &:active svg {
+    fill: $leaf;
+    opacity: 0.3;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .copyright {
+    border-top: none;
+    padding-top: 0;
+  }
+}
+
+.copyright__link {
+  align-self: center;
+  vertical-align: middle;
+  margin-right: 10px;
 }
