--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -1,5 +1,57 @@
 .page-footer {
-  margin: 20px;
+  margin: 0 auto;
   background-color: #f2f2f2;
-  border: 2px dashed red;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-width: 10px;
+  padding: 20px;
+}
+
+@media (min-width: $tablet-width) {
+  .page-footer {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
+
+.page-footer__copyright {
+  align-self: stretch;
+}
+
+@media (min-width: $tablet-width) {
+  .page-footer__copyright {
+    align-self: center;
+  }
+}
+
+.page-footer__logo {
+  align-self: stretch;
+
+  text-align: center;
+  border-bottom: 1px solid #cdcdcd;
+  padding-bottom: 25px;
+  cursor: pointer;
+
+  &:hover img {
+    opacity: 0.8;
+  }
+
+  &:active img {
+    opacity: 0.6;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .page-footer__logo {
+    border: none;
+    align-self: center;
+    padding: 0;
+  }
+}
+
+.page-footer__social {
+  padding: 22px;
 }
