--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -1,8 +1,44 @@
 .social {
-
-  border-top: 1px solid #e7e7e7;
-  border-bottom: 1px solid #e7e7e7;
   list-style: none;
   margin: 0;
   padding: 0;
+  display: flex;
+  justify-content: space-between;
+  width: 130px;
+}
+
+.social__link {
+  & svg {
+    fill: #444444;
+    vertical-align: middle;
+  }
+
+  &:hover svg,
+  &:focus svg {
+    fill: $leaf;
+  }
+
+  &:active svg {
+    fill: $leaf;
+    opacity: 0.3;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .social__link {
+    &--vk svg {
+      height: 16px;
+      width: 30px;
+    }
+
+    &--insta svg {
+      height: 23px;
+      width: 23px;
+    }
+
+    &--facebook svg {
+      height: 28px;
+      width: 14px;
+    }
+  }
 }
