--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -1,14 +1,12 @@
 .button {
   display: block;
-  padding: 10px;
-  margin: 25px;
+  padding: 10px 0;
 
   text-align: center;
   text-transform: uppercase;
   font-family: $font-head;
   font-size: 16px;
   line-height: 20px;
-  min-width: 280px;
 
   &--grey {
     background-color: #f2f2f2;
