--- a/source/sass/blocks/item-card.scss
+++ b/source/sass/blocks/item-card.scss
@@ -1,6 +1,88 @@
+.item-card {
+  display: flex;
+  flex-wrap: wrap;
+
+  align-items: center;
+  justify-content: center;
+  width: 280px;
+}
+
+@media (min-width: $tablet-width) {
+  .item-card {
+    flex-direction: column;
+    margin-top: 140px;
+    background-color: #f2f2f2;
+    width: 324px;
+    padding-bottom: 40px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .item-card {
+    flex-direction: column;
+    margin-top: 140px;
+    background-color: #f2f2f2;
+    width: 245px;
+  }
+}
+
 .item-card__headline {
   font-family: "Oswald-Regular", "Arial", sans-serif;
   font-size: 16px;
   line-height: 20px;
   color: #111111;
+  width: 80px;
+
+  text-transform: uppercase;
+}
+
+@media (min-width: $tablet-width) {
+  .item-card__headline {
+    font-size: 20px;
+
+    text-align: center;
+
+    display: inline-block;
+    width: 130px;
+    padding: 0 62px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .item-card__headline {
+    padding: 0 22px;
+  }
+}
+
+.item-card__wrapper {
+  align-self: center;
+  width: 50%;
+}
+
+@media (min-width: $tablet-width) {
+  .item-card__wrapper {
+    width: 250px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .item-card__wrapper {
+    width: 170px;
+  }
+}
+
+.item-card__order {
+  width: 280px;
+}
+
+@media (min-width: $tablet-width) {
+  .item-card__order {
+    width: 250px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .item-card__order {
+    width: 170px;
+  }
 }
