--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 90px;
+  margin-bottom: 65px;
 }
 
 @media (min-width: $tablet-width) {
@@ -14,13 +14,14 @@
 
 @media (min-width: $desktop-width) {
   .programs__header {
-    min-height: 700px;
+    min-height: 650px;
     flex-direction: row;
     align-items: center;
 
     justify-content: center;
     margin: 0 auto;
     margin-top: -70px;
+    margin-bottom: 80px;
   }
 }
 
@@ -29,9 +30,11 @@
   width: 260px;
   font-size: 36px;
   line-height: 36px;
+  font-weight: 400;
   color: #ffffff;
   margin: 0 auto;
-  margin-top: 25px;
+  margin-top: 26px;
+  margin-bottom: 26px;
 }
 
 @media (min-width: $tablet-width) {
@@ -44,6 +47,19 @@
     margin: 0;
     margin-left: 25%;
     margin-bottom: 30px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .programs__headline {
+    color: #111111;
+    font-size: 60px;
+    line-height: 60px;
+    text-align: left;
+
+    margin: 0;
+    margin-left: 140px;
+    margin-bottom: 42px;
   }
 }
 
@@ -66,23 +82,47 @@
   }
 }
 
+@media (min-width: $tablet-width) {
+  .programs__slogan {
+    color: #111111;
+    font-size: 20px;
+    line-height: 20px;
+    text-align: left;
+    margin-left: 142px;
+    margin-bottom: 52px;
+  }
+}
+
 .programs__choose {
-  box-sizing: border-box;
   margin: 0 auto;
+  margin-bottom: 22px;
   position: relative;
-  bottom: -330px;
-  width: 260px;
+  bottom: -290px;
+  width: 280px;
+  font-size: 14px;
+  line-height: 18px;
 }
 
 @media (min-width: $tablet-width) {
   .programs__choose {
     bottom: 0;
-
     margin: 0;
-
     z-index: 10;
     min-width: 225px;
     margin-left: 25%;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .programs__choose {
+    font-size: 20px;
+    line-height: 20px;
+    margin: 0;
+    margin-left: 142px;
+    padding: 16px 0;
+    width: 245px;
+
+
   }
 }
 
@@ -107,31 +147,34 @@
 
 @media (min-width: $desktop-width) {
   .programs__wrapper {
-    width: 50%;
+    width: 50vw;
     align-self: center;
+    min-height: 300px;
   }
 }
 
-.programs__can {
+.programs__image-container {
   margin-top: -140px;
 }
 
 @media (min-width: $tablet-width) {
   .programs__can {
-    margin: 0;
+    margin-top: 130px;
   }
 }
 
 @media (min-width: $desktop-width) {
   .programs__can {
     align-self: center;
-    margin-top: 400px;
+    margin-top: 150px;
+    margin-left: -160px;
+    position: absolute;
   }
 }
 
 @media (min-width: $tablet-width) {
   .programs__image-container {
-    margin-top: 45px;
+    margin-top: -55px;
     align-self: center;
   }
 }
@@ -147,6 +190,7 @@
     align-self: stretch;
     flex-grow: 1;
     margin: 0;
+    margin-top: -55px;
   }
 }
 
@@ -160,7 +204,10 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    width: 1220px;
+    width: 1200px;
     margin: 0 auto;
+  }
+  .programs__list-item {
+    margin: 0;
   }
 }
