--- a/source/sass/blocks/feature.scss
+++ b/source/sass/blocks/feature.scss
@@ -4,6 +4,7 @@
   list-style: none;
   display: flex;
   flex-direction: column;
+  counter-reset: item;
 }
 
 @media (min-width: $tablet-width) {
@@ -12,6 +13,8 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    width: 708px;
+    margin: 0 auto;
   }
 }
 
@@ -27,7 +30,7 @@
   color: #444444;
   font-style: 14px;
   line-height: 18px;
-  padding: 0 20px 30px 100px;
+  padding: 0 0 30px 70px;
   min-height: 40px;
   background-color: transparent;
   z-index: 2;
@@ -70,12 +73,15 @@
     align-items: center;
     width: 50%;
     min-height: 230px;
+    width: 200px;
+    counter-increment: item;
+    margin-right: 50px;
 
     flex-grow: 1;
 
     padding: 0;
     margin-bottom: 90px;
-    padding-left: 20px;
+
 
     &::before {
       position: absolute;
@@ -84,42 +90,24 @@
 
       background-repeat: no-repeat;
       background-position: center;
-      width: 60px;
-      height: 60px;
+      width: 80px;
+      height: 80px;
       left: 20px;
       top: 0;
     }
-  }
-}
 
-@media (min-width: $tablet-width) {
-  .feature__desc {
-    width: 250px;
-  }
+    &::after {
+      position: absolute;
+      content: counter(item);
 
-  .feature__desc::after {
-    position: absolute;
-    content: "0";
-    color: #f2f2f2;
-    font-size: 281px;
-    font-family: $font-head;
-    top: 90px;
-    left: 100px;
-    width: 20px;
-    height: 20px;
-    z-index: -1;
+      color: #f2f2f2;
+      font-size: 281px;
+      font-family: $font-head;
+      top: 90px;
+      left: 140px;
+      width: 20px;
+      height: 20px;
+      z-index: -1;
+    }
   }
-
-  //Нумерует по порядку пункты "Как это работает"
-  //Не проходит валидацию stylelint-ом
-  //
-  // @for $i from 1 through 4 {
-  //   .feature__item:nth-of-type(#{$i}) .feature__desc::after {
-  //     content: "#{$i}";
-  //   }
-  // }
-  //
-  //создан pull-request с добавлением директивы for в перечень разрешенных
-  //товарищ Зюзин пока его игнорирует
-  //как дальше с этим жить?
 }
