--- a/source/sass/blocks/program-item.scss
+++ b/source/sass/blocks/program-item.scss
@@ -1,27 +1,34 @@
 .program-item {
   background-color: $bg-grey;
 
-  margin: 20px;
   list-style: none;
-  min-width: 570px;
+  width: 280px;
+  margin: 0 auto;
+  margin-bottom: 20px;
+}
+
+@media (min-width: $tablet-width) {
+  .program-item {
+    // width: 47%;
+    width: 710px;
+    min-height: 372px;
+  }
 }
 
 @media (min-width: $desktop-width) {
   .program-item {
-    width: 45%;
+    // width: 47%;
+    width: 570px;
+    min-height: 372px;
   }
 }
 
 .program-item__title {
   position: relative;
   margin: 0;
-  padding: 28px 90px;
+  padding: 28px 0 0 90px;
 
-  font-size: 24px;
-  line-height: 37px;
-  color: #111111;
-  font-family: $font-head;
-  text-transform: uppercase;
+  @include program_title;
 
   &::before {
     position: absolute;
@@ -120,11 +127,12 @@
 }
 
 .program-item__desc {
-  font-size: 14px;
-  line-height: 18px;
-  padding-left: 22px;
-  padding-right: 36px;
-  color: #444444;
+  padding: 30px 20px 20px 20px;
+  margin: 0;
+  border-bottom: 1px solid #dadada;
+
+
+  @include content;
 }
 
 @media (min-width: $tablet-width) {
@@ -147,7 +155,7 @@
 
 .program-item__link {
   position: relative;
-  display: block;
+  display: inline-block;
   padding: 20px 0 22px 20px;
 
   font-family: $font-head;
@@ -155,7 +163,6 @@
   font-size: 16px;
   line-height: 16px;
   color: #111111;
-  border-top: 1px solid #dadada;
 
   &::before {
     position: absolute;
