--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -5,21 +5,20 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin-right: 30px;
 }
 
 @media (min-width: $tablet-width) {
   .site-list {
     flex-direction: row;
-    min-width: 400px;
+    min-width: 440px;
   }
 }
 
 @media (min-width: $desktop-width) {
   .site-list {
-    min-width: 500px;
-    justify-content: space-around;
-    padding-right: 70px;
+    min-width: 480px;
+    justify-content: space-between;
+
   }
 }
 
@@ -54,7 +53,7 @@
   .site-list__item {
     font-size: 20px;
 
-    padding: 5px 0;
+    padding: 10px 0;
     border-top: none;
   }
 }
