--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -17,12 +17,17 @@
 @import "blocks/item-card.scss";
 @import "blocks/properties.scss";
 @import "blocks/show-all.scss";
+@import "blocks/case.scss";
+@import "blocks/addition.scss";
+@import "blocks/addition-item-card.scss";
 
 
 body {
   font-family: "Arial", sans-serif;
   background-color: #ffffff;
   min-width: 320px;
+
+
 }
 
 a {
