Исправляет пути к картинкам

--- a/source/sass/blocks/program-item.scss
+++ b/source/sass/blocks/program-item.scss
@@ -48,7 +48,7 @@
     left: 30px;
     width: 35px;
     height: 49px;
-    background-image: url("/img/icon-cat-slim.svg");
+    background-image: url("../img/icon-cat-slim.svg");
     background-repeat: no-repeat;
 
     background-origin: border-box;
@@ -61,7 +61,7 @@
     left: 13px;
     width: 67px;
     height: 28px;
-    background-image: url("/img/icon-cat-pro.svg");
+    background-image: url("../img/icon-cat-pro.svg");
     background-repeat: no-repeat;
     background-origin: border-box;
   }
