--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -10,7 +10,6 @@
     width: 545px;
     display: flex;
     justify-content: flex-end;
-    
   }
 
   .main-nav__wrapper {
@@ -38,7 +37,7 @@
   top: -44px;
   border: none;
   cursor: pointer;
-  background-color: #fff;
+  background-color: #ffffff;
 
   &::after {
     content: "";
