--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -6,7 +6,7 @@
   justify-content: space-between;
   align-items: center;
   width: 320px;
-  margin: 0px auto;
+  margin: 0 auto;
   margin-top: 20px;
 }
 
@@ -14,7 +14,6 @@
   .page-header {
     flex-direction: row;
     min-width: 708px;
-    
   }
 }
 
@@ -41,8 +40,5 @@
     align-self: flex-end;
     padding: 0;
     margin: 0;
-    align-self: flex-end;
   }
 }
-
-
