--- a/source/sass/blocks/feature.scss
+++ b/source/sass/blocks/feature.scss
@@ -11,10 +11,9 @@
   .feature {
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    width: 708px;
-    margin: 0 auto;
+    align-content: flex-end;
   }
 }
 
@@ -28,9 +27,9 @@
   position: relative;
   font-family: "Arial", sans-serif;
   color: #444444;
-  font-style: 14px;
+  font-size: 14px;
   line-height: 18px;
-  padding: 0 0 30px 70px;
+  padding: 0 0 26px 80px;
   min-height: 40px;
   background-color: transparent;
   z-index: 2;
@@ -45,6 +44,7 @@
     width: 60px;
     height: 60px;
     left: 0;
+    top: -2px;
   }
 
   &--useful::before {
@@ -73,14 +73,14 @@
     align-items: center;
 
     min-height: 230px;
-    width: 200px;
+    width: 324px;
     counter-increment: item;
-    margin-right: 50px;
 
-    flex-grow: 1;
+    padding: 68px 70px 0 0;
+    margin-bottom: 88px;
 
-    padding: 0;
-    margin-bottom: 90px;
+    font-size: 16px;
+    line-height: 24px;
 
     &::before {
       position: absolute;
@@ -91,7 +91,7 @@
       background-position: center;
       width: 80px;
       height: 80px;
-      left: 20px;
+      left: 0;
       top: 0;
     }
 
@@ -103,10 +103,24 @@
       font-size: 281px;
       font-family: $font-head;
       top: 90px;
-      left: 140px;
+      left: 110px;
       width: 20px;
       height: 20px;
       z-index: -1;
     }
+  }
+}
+
+
+@media (min-width: $desktop-width) {
+  .feature__item {
+
+
+    min-height: 230px;
+    width: 245px;
+    padding: 0;
+    padding-top: 65px;
+    margin-bottom: 0;
+
   }
 }
