--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -20,6 +20,7 @@
 @import "blocks/case.scss";
 @import "blocks/addition.scss";
 @import "blocks/addition-item-card.scss";
+@import "blocks/contacts.scss";
 
 body {
   font-family: "Arial", sans-serif;
