--- a/source/sass/blocks/case.scss
+++ b/source/sass/blocks/case.scss
@@ -1,5 +1,18 @@
 .case {
   background-color: #f2f2f2;
+  margin-bottom: 78px;
+}
+
+@media (min-width: $tablet-width) {
+  .case {
+    margin-bottom: 60px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .case {
+    margin-bottom: 0;
+  }
 }
 
 .case__headline {
