--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -1,25 +1,36 @@
 .page-footer {
   margin: 0 auto;
   background-color: #f2f2f2;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  min-width: 10px;
   padding: 20px;
-}
-
-@media (min-width: $tablet-width) {
-  .page-footer {
-    flex-direction: row;
-    justify-content: space-between;
-  }
+  max-width: 100vw;
 }
 
 @media (min-width: $desktop-width) {
   .page-footer {
-    padding: 38px 0;
+    padding: 0;
+  }
+}
+
+.page-footer__wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 280px;
+  margin: 0 auto;
+}
+
+@media (min-width: $tablet-width) {
+  .page-footer__wrapper {
+    flex-direction: row;
+    justify-content: space-between;
+    width: 708px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .page-footer__wrapper {
+    width: $desktop-width;
   }
 }
 
@@ -55,18 +66,24 @@
   .page-footer__logo {
     border: none;
     align-self: center;
-    padding: 40px 10px;
+    padding: 40px 0;
   }
 }
 
 @media (min-width: $desktop-width) {
   .page-footer__logo {
-    padding: 0;
+    padding: 60px 0;
   }
 }
 
 .page-footer__social {
   padding: 21px;
+}
+
+@media (min-width: $tablet-width) {
+  .page-footer__social {
+    padding-left: 45px;
+  }
 }
 
 @media (min-width: $desktop-width) {
