--- a/source/sass/blocks/item-card.scss
+++ b/source/sass/blocks/item-card.scss
@@ -5,6 +5,7 @@
   align-items: center;
   justify-content: center;
   width: 280px;
+  margin-bottom: 21px;
 }
 
 @media (min-width: $tablet-width) {
@@ -13,7 +14,9 @@
     margin-top: 140px;
     background-color: #f2f2f2;
     width: 324px;
+    min-height: 430px;
     padding-bottom: 40px;
+    position: relative;
   }
 }
 
@@ -26,10 +29,19 @@
   }
 }
 
+@media (min-width: $tablet-width) {
+  .item-card__image {
+    position: absolute;
+    top: -30px;
+    left: 0;
+  }
+}
+
 .item-card__headline {
-  font-family: "Oswald-Regular", "Arial", sans-serif;
+  font-family: $font-head;
   font-size: 16px;
   line-height: 20px;
+  font-weight: 400;
   color: #111111;
   width: 80px;
 
@@ -39,6 +51,7 @@
 @media (min-width: $tablet-width) {
   .item-card__headline {
     font-size: 20px;
+    line-height: 20px;
 
     text-align: center;
 
