--- a/source/sass/blocks/properties.scss
+++ b/source/sass/blocks/properties.scss
@@ -4,7 +4,10 @@
   line-height: 16px;
   color: #111111;
   width: 100%;
+  border-collapse: collapse;
 }
+
+
 
 .properties__value {
   text-align: right;
@@ -15,4 +18,10 @@
   padding: 0;
   margin: 0;
   height: 10px;
+}
+
+@media (min-width: $tablet-width) {
+  .properties td {
+    border-bottom: 2px solid #cdcdcd;
+  }
 }
