--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -3,8 +3,9 @@
   margin: 0;
   padding: 0;
   display: flex;
-  justify-content: space-between;
-  width: 130px;
+  justify-content: center;
+  min-width: 130px;
+  flex-wrap: wrap;
 }
 
 .social__link {
@@ -41,4 +42,8 @@
       width: 14px;
     }
   }
+}
+
+.social__item {
+  padding: 15px;
 }
