--- a/source/sass/blocks/program-item.scss
+++ b/source/sass/blocks/program-item.scss
@@ -1,10 +1,11 @@
 .program-item {
   background-color: $bg-grey;
-
+  box-sizing: border-box;
   list-style: none;
   width: 280px;
+  padding: 20px;
   margin: 0 auto;
-  margin-bottom: 22px;
+  margin-bottom: 18px;
 }
 
 .program-item:nth-last-of-type(1) {
@@ -13,8 +14,10 @@
 
 @media (min-width: $tablet-width) {
   .program-item {
+
     width: 708px;
     min-height: 372px;
+    padding: 50px;
     margin-bottom: 30px;
   }
 }
@@ -29,7 +32,7 @@
 .program-item__title {
   position: relative;
   margin: 0;
-  padding: 28px 0 0 90px;
+  padding: 10px 0 30px 70px;
 
   @include program_title;
 
@@ -37,8 +40,8 @@
     position: absolute;
     content: "";
     background-color: $leaf;
-    top: 24px;
-    left: 22px;
+    top: 4px;
+    left: 2px;
     width: 50px;
     height: 50px;
     border-radius: 50%;
@@ -47,8 +50,8 @@
   &--slim::after {
     position: absolute;
     content: "";
-    top: 22px;
-    left: 30px;
+    top: 2px;
+    left: 10px;
     width: 35px;
     height: 49px;
     background-image: url("../img/icon-cat-slim.svg");
@@ -60,8 +63,8 @@
   &--pro::after {
     position: absolute;
     content: "";
-    top: 35px;
-    left: 13px;
+    top: 15px;
+    left: -8px;
     width: 67px;
     height: 28px;
     background-image: url("../img/icon-cat-pro.svg");
@@ -73,28 +76,28 @@
 @media (min-width: $tablet-width) {
   .program-item__title {
     font-size: 36px;
-    padding: 75px 0 23px 55px;
+    padding: 25px 0 23px 0;
 
     &::before {
       left: auto;
-      right: 62px;
-      top: 92px;
+      right: 12px;
+      top: 42px;
       width: 200px;
       height: 200px;
     }
 
     &--slim::after {
-      top: 80px;
+      top: 30px;
       left: auto;
-      right: 90px;
+      right: 40px;
       width: 141px;
       height: 194px;
     }
 
     &--pro::after {
-      top: 135px;
+      top: 85px;
       left: auto;
-      right: 30px;
+      right: -20px;
       width: 268px;
       height: 113px;
     }
@@ -103,25 +106,25 @@
 
 @media (min-width: $desktop-width) {
   .program-item__title {
-    padding: 75px 0 75px 216px;
+    padding: 25px 0 75px 165px;
 
     &::before {
-      left: 52px;
-      top: 47px;
+      left: 0;
+      top: -3px;
       width: 100px;
       height: 100px;
     }
 
     &--slim::after {
-      top: 40px;
-      left: 65px;
+      top: -10px;
+      left: 15px;
       width: 71px;
       height: 97px;
     }
 
     &--pro::after {
-      top: 70px;
-      left: 35px;
+      top: 17px;
+      left: -17px;
 
       width: 134px;
       height: 57px;
@@ -130,7 +133,8 @@
 }
 
 .program-item__desc {
-  margin: 30px 20px 0 20px;
+  margin: 0;
+  margin-bottom: 20px;
   padding-bottom: 20px;
   border-bottom: 1px solid #dadada;
 
@@ -141,9 +145,9 @@
   .program-item__desc {
     font-size: 16px;
     line-height: 24px;
-    padding-left: 52px;
-    padding-right: 320px;
-    padding-bottom: 55px;
+    padding-left: 0;
+    padding-right: 265px;
+    padding-bottom: 58px;
     margin: 0;
     border: none;
   }
@@ -151,7 +155,7 @@
 
 @media (min-width: $desktop-width) {
   .program-item__desc {
-    padding-right: 50px;
+    padding-right: 0;
     padding-bottom: 30px;
   }
 }
@@ -159,7 +163,7 @@
 .program-item__link {
   position: relative;
   display: inline-block;
-  padding: 20px 0 22px 20px;
+
 
   font-family: $font-head;
   text-transform: uppercase;
@@ -170,9 +174,9 @@
   &::before {
     position: absolute;
     content: "";
-    top: 27px;
-    left: 115px;
-    width: 25px;
+    top: 7px;
+    right: -35px;
+    width: 20px;
     height: 2px;
     background-color: #111111;
   }
@@ -180,8 +184,8 @@
   &::after {
     position: absolute;
     content: "";
-    top: 22px;
-    left: 135px;
+    top: 2px;
+    right: -45px;
     width: 0;
     height: 0;
     border: 6px solid transparent;
@@ -191,18 +195,18 @@
 
 @media (min-width: $tablet-width) {
   .program-item__link {
-    padding: 0 0 60px 53px;
+    padding-bottom: 10px;
     font-size: 20px;
     line-height: 20px;
     border: none;
 
     &::before {
-      left: 175px;
+      right: -45px;
       top: 10px;
     }
 
     &::after {
-      left: 195px;
+      right: -55px;
       top: 5px;
     }
   }
