--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -142,6 +142,14 @@
   width: 100%;
 }
 
+
+@media (min-resolution: 2dppx) {
+  .programs__wrapper {
+    background-image: url("../img/index-background-mobile@2x.jpg");
+  }
+}
+
+
 @media (min-width: $tablet-width) {
   .programs__wrapper {
     background-image: none;
@@ -204,6 +212,12 @@
     flex-grow: 1;
     margin: 0;
     margin-top: -55px;
+  }
+
+  @media (min-resolution: 2dppx) {
+    .programs__image-container {
+      background-image: url("../img/index-background-desktop@2x.jpg");
+    }
   }
 }
 
