--- a/source/sass/_vars.scss
+++ b/source/sass/_vars.scss
@@ -2,6 +2,8 @@
 $white: #ffffff;
 $white-two: #f2f2f2;
 $leaf: #68b738;
+$pinkish-grey: #cdcdcd;
+$greyish-brown: #444444;
 
 $bg-grey: $white-two;
 
@@ -24,6 +26,13 @@ $desktop-width: 1220px;
 @mixin content {
   font-size: 14px;
   line-height: 18px;
+  color: #444444;
+  font-family: $font-content;
+}
+
+@mixin content-tablet {
+  font-size: 16px;
+  line-height: 24px;
   color: #444444;
   font-family: $font-content;
 }
