--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -21,6 +21,8 @@
 @import "blocks/addition.scss";
 @import "blocks/addition-item-card.scss";
 @import "blocks/contacts.scss";
+@import "blocks/data-table.scss";
+@import "blocks/slider.scss";
 
 body {
   font-family: "Arial", sans-serif;
