--- a/source/sass/blocks/case.scss
+++ b/source/sass/blocks/case.scss
@@ -20,11 +20,15 @@
 .case__wrapper {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 @media (min-width: $desktop-width) {
   .case__wrapper {
     flex-direction: row;
+    justify-content: center;
+    background-color: #f2f2f2;
+
   }
 }
 
@@ -51,12 +55,13 @@
 @media (min-width: $desktop-width) {
   .case__headline {
     width: 1220px;
+    margin-bottom: 75px;
   }
 }
 
 .case__container {
   width: 280px;
-  margin: 0 auto;
+  margin: 0;
   margin-bottom: 35px;
 }
 
@@ -69,10 +74,12 @@
 
 @media (min-width: $desktop-width) {
   .case__container {
-    width: 570px;
-    background-color: #f2f2f2;
+    width: 610px;
+
     margin-bottom: 0;
-    padding-top: 75px;
+    margin-top: -5px;
+
+
   }
 }
 
@@ -87,6 +94,15 @@
     @include content-tablet;
     padding-right: 10px;
     margin-bottom: 55px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .case__desc {
+    @include content-tablet;
+    padding: 0;
+    margin-bottom: 70px;
+    width: 432px;
   }
 }
 
