--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -8,13 +8,13 @@
 
 @media (min-width: $tablet-width) {
   .contacts {
-    max-width: $tablet-width;
+    width: 100%;
   }
 }
 
 @media (min-width: $desktop-width) {
   .contacts {
-    max-width: 1440px;
+    min-width: auto;
   }
 }
 
@@ -30,7 +30,7 @@
 .contacts__wrapper {
   background-color: #ffffff;
 
-  width: 320px;
+  width: 100vw;
   position: absolute;
   top: -78px;
   display: flex;
@@ -51,7 +51,7 @@
   .contacts__wrapper {
     position: absolute;
     top: 95px;
-    left: 110px;
+    left: 40px;
     width: 570px;
 
     margin: 0;
@@ -68,7 +68,7 @@
   color: #111111;
   width: 125px;
 
-  margin: 0;
+  margin: 0 ;
   padding: 30px 0 24px 20px;
 }
 
