--- a/source/sass/blocks/data-table.scss
+++ b/source/sass/blocks/data-table.scss
@@ -23,7 +23,8 @@
 @media (min-width: $desktop-width) {
   .data-table tbody {
     flex-wrap: wrap;
-    width: 570px;
+    width: 370px;
+    justify-content: space-between;
   }
 }
 
@@ -36,6 +37,13 @@
   .data-table__item {
 
     margin: 0;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .data-table__item {
+
+    margin-bottom: 50px;
   }
 }
 
@@ -120,8 +128,8 @@
     flex-direction: row;
 
     align-items: center;
-    justify-content: space-around;
-    width: 100%;
+    justify-content: space-between;
+    width: 330px;
   }
 }
 
