--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -1,5 +1,5 @@
 .slider {
-  margin: 0 auto;
+  margin: 0;
   margin-bottom: 50px;
   position: relative;
   width: 100vw;
@@ -15,6 +15,7 @@
 @media (min-width: $desktop-width) {
   .slider {
     margin-bottom: 0;
+    width: 610px;
   }
 }
 
@@ -30,10 +31,12 @@
 
 @media (min-width: $tablet-width) {
   .slider__slides {
-    width: 1380px;
+    width: 1386px;
     margin-bottom: 10px;
   }
 }
+
+
 
 .slider__inner {
   overflow: hidden;
@@ -49,6 +52,14 @@
   }
 }
 
+@media (min-width: $desktop-width) {
+  .slider__inner {
+
+margin-bottom: 20px;
+    margin-top: -190px;
+  }
+}
+
 .slider__controls {
   display: flex;
   justify-content: center;
@@ -57,6 +68,16 @@
 @media (min-width: $tablet-width) {
   .slider__controls {
     margin-bottom: 70px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .slider__controls {
+    justify-content: space-between;
+    width: 570px;
+    padding-left: 40px;
+
+
   }
 }
 
@@ -73,7 +94,6 @@
   .slider__controls label {
     font-size: 20px;
     line-height: 20px;
-
     border-bottom: 1px dotted rgba(0, 0, 0, 0.23);
     padding: 5px 0;
     align-self: center;
@@ -83,6 +103,13 @@
     }
   }
 }
+
+@media (min-width: $desktop-width) {
+  .slider__controls label {
+    margin: 0;
+  }
+}
+
 
 // #btn-1:checked ~ .slider__controls label[for="btn-1"]{
 //   background-color: red;
@@ -107,6 +134,17 @@
 
   #btn-2:checked ~ .slider__inner .slider__slides {
     transform: translate(-675px);
+  }
+}
+
+
+@media (min-width: $desktop-width) {
+  #btn-1:checked ~ .slider__inner .slider__slides {
+    transform: translate(-40px);
+  }
+
+  #btn-2:checked ~ .slider__inner .slider__slides {
+    transform: translate(-730px);
   }
 }
 
@@ -169,11 +207,11 @@
 
 @media (min-width: $tablet-width) {
   .slider__scale-point {
-    top: -17px;
-    width: 10px;
-    height: 10px;
+    top: -15px;
+    width: 8px;
+    height: 8px;
     box-shadow: 0px 2px 5px 0 rgba(0, 0, 0, 0.15);
-    border: solid 15px #ffffff;
+    border: solid 14px #ffffff;
     border-radius: 50%;
     background-color: $leaf;
   }
