--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -129,7 +129,7 @@
 @media (min-width: $desktop-width) {
   .programs__choose {
     margin: 0;
-    align-self: center
+    align-self: center;
   }
 }
 
