--- a/source/sass/blocks/addition.scss
+++ b/source/sass/blocks/addition.scss
@@ -4,12 +4,15 @@
   flex-direction: column;
   position: relative;
 
+  margin: 0 auto;
+  margin-bottom: 100px;
+
   &::after {
     position: absolute;
     content: "";
     width: 100vw;
     height: 3px;
-    top: 54px;
+    top: 45px;
     right: 0;
     background-color: $leaf;
   }
@@ -17,39 +20,278 @@
 
 @media (min-width: $tablet-width) {
   .addition {
+    margin-bottom: 65px;
+
     &::after {
-      top: 70px;
+      top: 90px;
+    }
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .addition {
+    margin-bottom: 85px;
+
+    &::after {
+      top: 90px;
     }
   }
 }
 
 .addition__headline {
+  display: block;
   font-family: $font-head;
   font-weight: 400;
   font-size: 24px;
   line-height: 24px;
   align-self: flex-start;
-  padding: 20px;
+  padding: 8px 20px 10px 18px;
   background-color: #ffffff;
   z-index: 1;
+  margin-bottom: 25px;
 }
 
 @media (min-width: $tablet-width) {
   .addition__headline {
     font-size: 36px;
     line-height: 36px;
-    margin-left: 20px;
+    margin: 68px 0 80px 30px;
+
+    padding: 0 30px 0 37px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .addition__headline {
+    margin: 70px 0 80px 0;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .addition__wrapper {
+    display: flex;
+    justify-content: space-around;
   }
 }
 
 .addition__list {
+  display: flex;
+  flex-direction: column;
   list-style: none;
   margin: 0;
+  margin-bottom: 40px;
   padding: 0;
+  // min-width: 280px;
+  // width: 88%;
+  width: calc(100vw - 40px);
+  border-top: 1px solid #ededed;
+}
+
+@media (min-width: $tablet-width) {
+  .addition__list {
+    width: calc(100vw - 60px);
+    border: 1px solid #ededed;
+    margin-bottom: 67px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .addition__list {
+    box-sizing: border-box;
+    width: 975px;
+
+    margin: 0;
+    border: none;
+    border-top: 1px solid #ededed;
+  }
+}
+
+.addition-item-card {
+  min-height: 128px;
+  border-bottom: 1px solid #ededed;
+}
+
+@media (min-width: $tablet-width) {
+  .addition-item-card {
+    padding: 0 38px;
+    min-height: 138px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .addition-item-card {
+    padding: 0;
+    display: flex;
+    min-height: 40px;
+    justify-content: space-between;
+    margin-right: 80px;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .addition-item-card__wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    align-content: center;
+    padding: 24px 0;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .addition-item-card__wrapper {
+    flex-grow: 1;
+    padding: 25px 0 23px 0;
+  }
+}
+
+.addition-item-card__headline {
+  padding-top: 13px;
+  margin: 0;
+  margin-bottom: 13px;
+  font-family: $font-head;
+  font-weight: 400;
+  text-transform: uppercase;
+  font-size: 16px;
+  line-height: 16px;
+  color: #222222;
+}
+
+@media (min-width: $tablet-width) {
+  .addition-item-card__headline {
+    margin: 0;
+    padding: 0;
+
+    font-size: 20px;
+    line-height: 20px;
+  }
 }
 
 .addition-item-card__properties {
+  display: flex;
+  font-size: 14px;
+  line-height: 14px;
+  justify-content: space-between;
   list-style: none;
   margin: 0;
   padding: 0;
+  margin-bottom: 15px;
+}
+
+@media (min-width: $tablet-width) {
+  .addition-item-card__properties {
+    margin: 0;
+    font-size: 16px;
+    line-height: 20px;
+    justify-content: center;
+    align-content: flex-end;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .addition-item-card__price {
+    // padding-left: 50px;
+    min-width: 95px;
+    text-align: right;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .addition-item-card__price {
+    min-width: 80px;
+    text-align: left;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .addition-item-card__value {
+    min-width: 245px;
+    text-align: left;
+  }
+}
+
+.addition__gift {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: $leaf;
+  background-image: url("/img/gift-photo-mobile@1x.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  height: 289px;
+  margin: 0 auto;
+  margin-bottom: 10px;
+  width: 280px;
+}
+
+@media (min-width: $tablet-width) {
+  .addition__gift {
+    flex-direction: row;
+    justify-content: space-between;
+    height: 200px;
+    background-image: url("/img/gift-photo-tablet@1x.jpg");
+    width: calc(100vw - 60px);
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .addition__gift {
+    margin: 0;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 290px;
+    background-image: url("/img/gift-photo-desktop@1x.jpg");
+    width: 245px;
+  }
+}
+
+.addition__gift svg {
+  padding: 63px;
+}
+
+@media (min-width: $tablet-width) {
+  .addition__gift svg {
+    padding: 0;
+    padding-left: 90px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .addition__gift svg {
+    padding: 65px 95px;
+  }
+}
+
+.addition__gift-headline {
+  margin: 0;
+  text-align: center;
+  width: 180px;
+  color: $white;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 400;
+}
+
+@media (min-width: $tablet-width) {
+  .addition__gift-headline {
+    text-align: left;
+    padding-right: 105px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .addition__gift-headline {
+    text-align: center;
+    padding: 0;
+    padding-bottom: 40px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .addition-item-card__order {
+    margin: 15px 0;
+    width: 245px;
+    box-sizing: border-box;
+  }
 }
