--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -1,25 +1,24 @@
 .catalog {
   background-color: #ffffff;
   margin: 0 auto;
-  width: 280px;
 }
 
 @media (min-width: $tablet-width) {
   .catalog {
-    width: $tablet-width - 40px;
+    width: 708px;
   }
 }
 
 @media (min-width: $desktop-width) {
   .catalog {
-    width: $desktop-width - 40px;
+    width: 1220px;
   }
 }
 
 .catalog__list {
   list-style: none;
   padding: 0;
-  margin: 0;
+  margin: 0 auto;
 }
 
 @media (min-width: $tablet-width) {
@@ -37,12 +36,26 @@
   font-weight: 400;
   color: #111111;
   margin: 0;
-  margin-top: 15px;
-  margin-bottom: 25px;
+  padding-top: 15px;
+
+  padding-left: 20px;
+  padding-bottom: 28px;
+  border-bottom: 1px solid #f2f2f2;
+  border-top: 1px solid #f2f2f2;
 }
 
 @media (min-width: $tablet-width) {
   .catalog__headline {
     font-size: 60px;
+    border: none;
+    padding: 0;
+    margin-bottom: 20px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .catalog__headline {
+    margin-top: 70px;
+    margin-bottom: 25px;
   }
 }
