--- a/source/sass/blocks/item-card.scss
+++ b/source/sass/blocks/item-card.scss
@@ -1,21 +1,28 @@
 .item-card {
   display: flex;
   flex-wrap: wrap;
-
-  align-items: center;
+  min-height: 208px;
+  align-items: flex-start;
   justify-content: center;
-  width: 280px;
-  margin-bottom: 21px;
+  align-content: flex-start;
+
+  margin-bottom: 0;
+  padding: 0 20px 0 20px;
+  border-bottom: 1px solid #ededed;
 }
 
 @media (min-width: $tablet-width) {
   .item-card {
     flex-direction: column;
-    margin-top: 140px;
+    justify-content: space-around;
+    align-items: center;
+    align-content: center;
+    margin-top: 142px;
     background-color: #f2f2f2;
     width: 324px;
+    box-sizing: border-box;
     min-height: 430px;
-    padding-bottom: 40px;
+    padding: 96px 0 20px 0;
     position: relative;
   }
 }
@@ -24,15 +31,97 @@
   .item-card {
     flex-direction: column;
     margin-top: 140px;
+    margin-bottom: 5px;
     background-color: #f2f2f2;
     width: 245px;
+  }
+}
+
+.item-card--show-all {
+  justify-content: space-around;
+  align-items: center;
+  align-content: space-evenly;
+}
+
+@media (min-width: $tablet-width) {
+  .item-card--show-all {
+    background-color: #ffffff;
+    border: 1px solid #ededed;
+    padding: 0;
+    justify-content: space-between;
+    padding-top: 52px;
+    padding-bottom: 40px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .item-card--show-all {
+    background-color: #ffffff;
+  }
+}
+
+.item-card picture {
+  font-size: 0;
+}
+
+.item-card__desc {
+  font-size: 12px;
+  line-height: 16px;
+  margin: 0;
+}
+
+@media (min-width: $tablet-width) {
+  .item-card__desc {
+    font-size: 16px;
+    text-align: center;
+  }
+}
+
+.item-card__plus {
+  width: 31px;
+  height: 31px;
+  position: relative;
+  opacity: 0.2;
+
+  &::before {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 2px;
+    top: 15px;
+    background-color: #222222;
+  }
+
+  &::after {
+    position: absolute;
+    content: "";
+    width: 2px;
+    height: 100%;
+    left: 15px;
+    background-color: #222222;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .item-card__plus {
+    width: 61px;
+    height: 61px;
+
+    &::before {
+      top: 30px;
+    }
+
+    &::after {
+      left: 30px;
+    }
+    margin-bottom: 32px;
   }
 }
 
 @media (min-width: $tablet-width) {
   .item-card__image {
     position: absolute;
-    top: -30px;
+    bottom: 300px;
     left: 0;
   }
 }
@@ -43,8 +132,10 @@
   line-height: 20px;
   font-weight: 400;
   color: #111111;
-  width: 80px;
 
+  margin: 0;
+  width: 70%;
+  padding: 6px 0 10px 0;
   text-transform: uppercase;
 }
 
@@ -52,29 +143,42 @@
   .item-card__headline {
     font-size: 20px;
     line-height: 20px;
-
     text-align: center;
-
     display: inline-block;
     width: 130px;
-    padding: 0 62px;
+    padding: 20px 62px;
   }
 }
 
 @media (min-width: $desktop-width) {
   .item-card__headline {
-    padding: 0 22px;
+    padding: 20px 22px 0 22px;
+    margin-bottom: 20px;
+  }
+}
+
+.item-card__headline-show-all {
+  width: auto;
+  padding: 16px 0 0 0;
+}
+
+@media (min-width: $tablet-width) {
+  .item-card__headline-show-all {
+    margin-bottom: 30px;
   }
 }
 
 .item-card__wrapper {
   align-self: center;
   width: 50%;
+  display: flex;
+  flex-direction: column;
 }
 
 @media (min-width: $tablet-width) {
   .item-card__wrapper {
     width: 250px;
+    align-self: center;
   }
 }
 
@@ -84,13 +188,31 @@
   }
 }
 
+.item-card__wrapper-show-all {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  min-height: 100px;
+}
+
+@media (min-width: $tablet-width) {
+  .item-card__wrapper-show-all {
+    width: 170px;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
 .item-card__order {
-  width: 280px;
+  width: 100%;
 }
 
 @media (min-width: $tablet-width) {
   .item-card__order {
-    width: 250px;
+    width: 249px;
+    box-sizing: border-box;
   }
 }
 
