--- a/source/sass/blocks/properties.scss
+++ b/source/sass/blocks/properties.scss
@@ -7,15 +7,20 @@
   border-collapse: collapse;
 }
 
+@media (min-width: $tablet-width) {
+  .properties {
+    font-size: 16px;
+  }
+}
+
 .properties__value {
   text-align: right;
 }
 
-.properties__field td {
-  border: none;
-  padding: 0;
-  margin: 0;
-  height: 10px;
+@media (min-width: $tablet-width) {
+  .properties__value {
+    padding: 7px 0;
+  }
 }
 
 @media (min-width: $tablet-width) {
