--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -22,6 +22,10 @@
 @import "blocks/contacts.scss";
 @import "blocks/data-table.scss";
 @import "blocks/slider.scss";
+@import "blocks/form.scss";
+@import "blocks/program-choise.scss";
+
+
 
 body {
   font-family: "Arial", sans-serif;
