--- a/source/sass/blocks/addition.scss
+++ b/source/sass/blocks/addition.scss
@@ -63,7 +63,8 @@
 
 @media (min-width: $desktop-width) {
   .addition__headline {
-    margin: 70px 0 80px 0;
+    // margin: 70px 0 80px 0;
+    margin-left: calc((100vw - 1280px) / 2);
   }
 }
 
